apps/base/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: searxng
  namespace: searxng
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: SearXNG
    gethomepage.dev/description: Privacy search
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: searxng.png
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - search.f4mily.net
      secretName: wildcard-f4mily-net-tls
  rules:
    - host: search.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng
                port:
                  number: 8080
